--- a/src/modules/standard/_progress.scss
+++ b/src/modules/standard/_progress.scss
@@ -1,19 +1,22 @@
 .progress {
 	
+	.bar {
+		width: 40px;
+		height: 40px;
+		position:relative;
+		margin: 5px;
+		background: #bec5d1; 
+		float: left;
+
+		.inner {
+			position:absolute;
+			width:0%;
+			height:0%;
+			background: #6ac43c;
+		}
+
+	}
+
 }
 
-.progress .bar {
-	width: 40px;
-	height: 40px;
-	position:relative;
-	margin: 5px;
-	background: #bec5d1; 
-	float: left;
-}
-
-.progress .bar .inner {
-	position:absolute;
-	width:0%;
-	height:0%;
-	background: #6ac43c;
-}
+ 
