--- a/src/modules/standard/_accordion.scss
+++ b/src/modules/standard/_accordion.scss
@@ -4,22 +4,52 @@
 
 		.link {
 			padding: 10px;
-			background: #42cef4;
-			color: #FFF;
+			background: #f1f1f1;
+			color: #222;
 			margin-bottom: 1px;
-
+			position:relative;
+			overflow: hidden;
+			transition:0.3s all;
 			.toggle {
 				cursor:pointer;
 				font-weight:bold;
+			}
+			.fluid{
+				position:absolute;
+				top:0;
+				left:0;
+				width:100%;
+				height:100%;
 			}
 		}
 
 		.content {
 			padding: 10px;
-			white-space: nowrap;
 		}
 
+
 	}
+
+	&.vertical {
+		.item, .link, .content {
+			float:left;
+			height:100%;
+		}
+		.link { margin-right:1px; }
+		.content {
+			overflow: hidden;
+		} 
+		&:after {
+			visibility: hidden;
+			display: block;
+			font-size: 0;
+			content: " ";
+			clear: both;
+			height: 0;
+		}
+	}
+
+	 
 
 }
  
