--- a/src/modules/standard/_slider.scss
+++ b/src/modules/standard/_slider.scss
@@ -7,41 +7,72 @@
 	-moz-box-shadow:    inset 0 0 3px #999;
     -webkit-box-shadow: inset 0 0 3px #999;
     box-shadow:         inset 0 0 3px #999;
-}		
-
-.slider .progress {
-	position:absolute;
-	left: 0%;
-	width: 0%;
-	height:100%;
-	background: #29a9dc;
  
-}
+    .progress {
+		position:absolute;
+		left: 0%;
+		width: 0%;
+		height:100%;
+		background: #29a9dc;
 
-.slider .progress .handle {
-	position:absolute;
-	border-radius: 5px;
-	background: #EEE;
-	width: 30px;
-	height: 30px;
-	margin-left: -15px;
-	top: -10px;
-	left: 100%;
-	color: #999;
-	line-height:30px;
-	font-size: 16px;
-	text-align: center;
-	cursor: pointer;
-	transition: 0.25s all;
-}
+		.handle {
+			position:absolute;
+			border-radius: 5px;
+			background: #EEE;
+			width: 30px;
+			height: 30px;
+			top: 50%;
+			left: 100%;
+			color: #999;
+			line-height:30px;
+			font-size: 16px;
+			text-align: center;
+			cursor: pointer;
+			transition: 0.25s all;
+			transform:translate(-50%,-50%);
 
-.slider .progress .handle:active {
-	background:#333743;
-	color:#FFF;
+			&:active {
+				background:#333743;
+				color:#FFF;
+			}
 
-}
+			&.min {
+				left:0%;
+			}
 
-.slider .progress .handle.min {
-	left: 0%;
-	margin-left: -30px;
-}
+			&.top {
+				top:0;
+				transform:translate(-50%,-100%);
+			}
+			&.bottom {
+				top:100%;
+				transform:translate(-50%,0);
+			}
+
+		}
+	 
+	}
+
+	&.vertical {
+    	height:100%;
+    	width:10px;
+    	min-height:200px;
+
+    	.progress {
+    		height:0;
+    		width:100%;
+    		bottom:0;
+
+    		.handle {
+    			left:50%!important;
+    			top:0;
+    		 	&.min {
+					top:100%;
+				}
+    		}
+
+    	}	
+    }
+
+}		
+ 
